--- a/chatbot.html
+++ b/chatbot.html
@@ -1,110 +1,128 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>chatbot</title>
-  </head>
 
-  <body>
-    <div class="js-container"></div>
-    <script src="https://unpkg.com/supersimpledev/react.js"></script>
-    <script src="https://unpkg.com/supersimpledev/react-dom.js"></script>
-    <script src="https://unpkg.com/supersimpledev/babel.js"></script>
+<head>
+  <title>chatbot</title>
+</head>
 
-    <script type="text/babel">
-      function ChatInput({chatMessages,setChatMessages}) {
-        const [inputText, setInputText] = React.useState('');
+<body>
+  <div class="js-container"></div>
+  <script src="https://unpkg.com/supersimpledev/react.js"></script>
+  <script src="https://unpkg.com/supersimpledev/react-dom.js"></script>
+  <script src="https://unpkg.com/supersimpledev/babel.js"></script>
+  <script src="https://unpkg.com/supersimpledev/chatbot.js"></script>
 
-        function saveInputText(event) {
-          setInputText(event.target.value);
-        }
+  <script type="text/babel">
+    function ChatInput({ chatMessages, setChatMessages }) {
+      const [inputText, setInputText] = React.useState('');
 
-        function sendMessage() {        
-           setChatMessages([
-            ...chatMessages,
-            {
-              message: inputText,
-              sender: 'user',
-              id: crypto.randomUUID(),
-            },
-          ]);
-        }
-        return (
-          <>
-            <input
-              placeholder="send a massage to chatbot"
-              size="30"
-              onChange={saveInputText}
-            />
-            <button onClick={sendMessage}>send</button>
-          </>
-        );
+      function saveInputText(event) {
+        setInputText(event.target.value);
       }
 
-      function ChatMessage({ message, sender }) {
-        return (
-          <div>
-            {sender === "robot" && <img src="robot.png" width="50" />}
-            {message}
-            {sender === "user" && <img src="user.png" width="50" />}
-          </div>
-        );
-      }
+      function sendMessage() {
+        const newChatMessages = [
+          ...chatMessages,
+          {
+            message: inputText,
+            sender: 'user',
+            id: crypto.randomUUID(),
+          },
+        ]
+        setChatMessages(newChatMessages);
 
-      
-      function ChatMessages({chatMessages}) {        
-        return (
-          <>            
-            {chatMessages.map((chatMessage) => {
-              return (
-                <ChatMessage
-                  message={chatMessage.message}
-                  sender={chatMessage.sender}
-                  key={chatMessage.id}
-                />
-              );
-            })}
-          </>
-        );
-      }
-
-
-      function App() {
-         const [chatMessages, setChatMessages] = React.useState([
+        const response = Chatbot.getResponse(inputText);
+        setChatMessages([
+          ...newChatMessages,
           {
-            message: "hello chatbot",
-            sender: "user",
-            id: "id1",
-          },
-          {
-            message: "hello how can i help you?",
-            sender: "robot",
-            id: "id2",
-          },
-          {
-            message: "can you get me to day date?",
-            sender: "user",
-            id: "id3",
-          },
-          {
-            message: "today is octomber 11",
-            sender: "robot",
-            id: "id4",
-          },
+            message: response,
+            sender: 'robot',
+            id: crypto.randomUUID()
+          }
         ]);
 
-        // const [chatMessages,setChatMessages]=array;
-        // const chatMessages = array[0];
-        //const setChatMessages = array[1];   
-        return (
-          <>
-            <ChatInput chatMessages={chatMessages} setChatMessages={setChatMessages}/>
-            <ChatMessages chatMessages={chatMessages}/>
-          </>
-        );
-      }
+        setInputText('');
 
-      const container = document.querySelector(".js-container");
-      ReactDOM.createRoot(container).render(<App />);
-    </script>
-  </body>
+      }
+      return (
+        <>
+          <input
+            placeholder="send a massage to chatbot"
+            size="30"
+            onChange={saveInputText}
+            value={inputText}
+          />
+          <button onClick={sendMessage}>send</button>
+        </>
+      );
+    }
+
+    function ChatMessage({ message, sender }) {
+      return (
+        <div>
+          {sender === "robot" && <img src="robot.png" width="50" />}
+          {message}
+          {sender === "user" && <img src="user.png" width="50" />}
+        </div>
+      );
+    }
+
+
+    function ChatMessages({ chatMessages }) {
+      return (
+        <>
+          {chatMessages.map((chatMessage) => {
+            return (
+              <ChatMessage
+                message={chatMessage.message}
+                sender={chatMessage.sender}
+                key={chatMessage.id}
+              />
+            );
+          })}
+        </>
+      );
+    }
+
+
+    function App() {
+      const [chatMessages, setChatMessages] = React.useState([
+        {
+          message: "hello chatbot",
+          sender: "user",
+          id: "id1",
+        },
+        {
+          message: "hello how can i help you?",
+          sender: "robot",
+          id: "id2",
+        },
+        {
+          message: "can you get me to day date?",
+          sender: "user",
+          id: "id3",
+        },
+        {
+          message: "today is octomber 11",
+          sender: "robot",
+          id: "id4",
+        },
+      ]);
+
+      // const [chatMessages,setChatMessages]=array;
+      // const chatMessages = array[0];
+      //const setChatMessages = array[1];   
+      return (
+        <>
+          <ChatInput chatMessages={chatMessages} setChatMessages={setChatMessages} />
+          <ChatMessages chatMessages={chatMessages} />
+        </>
+      );
+    }
+
+    const container = document.querySelector(".js-container");
+    ReactDOM.createRoot(container).render(<App />);
+  </script>
+</body>
+
 </html>
