--- a/chatbot.html
+++ b/chatbot.html
@@ -4,32 +4,75 @@
 <head>
   <title>chatbot</title>
   <style>
-    .send-button{
-      background-color:rgb(25,135,84);
-      color:white;
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      margin-top: 0px;
+      margin-bottom: 0px;
+    }
+
+    .send-button {
+      background-color: rgb(25, 135, 84);
+      color: white;
       padding: 12px 20px;
       margin-left: 10px;
       border: none;
       border-radius: 10px;
       font-size: 15px;
-      cursor: pointer;           
+      cursor: pointer;
     }
-    .chat-input{
+
+    .chat-input {
       padding: 12px 15px;
       border-radius: 10px;
       border-width: 1px;
       font-size: 15px;
       flex-grow: 1;
-    }
-    .chat-input-container{
-      display:flex;
 
     }
-    .app-container{
+
+    .chat-input-container {
+      display: flex;
+      margin-bottom: 60px;
+    }
+
+    .app-container {
       max-width: 600px;
-      /* margin-left: auto;
-      margin-right: auto; */
-  
+      margin-left: auto;
+      margin-right: auto;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .chat-message-user {
+      display: flex;
+      justify-content: end;
+      align-items: start;
+    }
+
+    .chat-message-robot {
+      display: flex;
+      align-items: start;
+    }
+
+    .chat-message-text {
+      background-color: rgb(238, 238, 238);
+      padding: 15px 20px;
+      border-radius: 10px;
+      margin-right: 10px;
+      margin-left: 10px;
+      margin-bottom: 20px;
+      max-width: 300px;
+    }
+
+    .chat-message-profile {
+      width: 45px;
+    }
+
+    .chat-message-container {
+      flex-grow: 1;
+      margin-top: 20px;
+      overflow: scroll;
     }
   </style>
 </head>
@@ -43,7 +86,7 @@
 
   <script type="text/babel">
     function ChatInput({ chatMessages, setChatMessages }) {
-      const [inputText, setInputText] = React.useState('');
+      const [inputText, setInputText] = React.useState("");
 
       function saveInputText(event) {
         setInputText(event.target.value);
@@ -54,10 +97,10 @@
           ...chatMessages,
           {
             message: inputText,
-            sender: 'user',
-            id: crypto.randomUUID(), 
+            sender: "user",
+            id: crypto.randomUUID(),
           },
-        ]
+        ];
         setChatMessages(newChatMessages);
 
         const response = Chatbot.getResponse(inputText);
@@ -65,13 +108,12 @@
           ...newChatMessages,
           {
             message: response,
-            sender: 'robot',
-            id: crypto.randomUUID()
-          }
+            sender: "robot",
+            id: crypto.randomUUID(),
+          },
         ]);
 
-        setInputText('');
-
+        setInputText("");
       }
       return (
         <div className="chat-input-container">
@@ -82,25 +124,34 @@
             value={inputText}
             className="chat-input"
           />
-          <button onClick={sendMessage} className="send-button">send</button>
+          <button onClick={sendMessage} className="send-button">
+            send
+          </button>
         </div>
       );
     }
 
     function ChatMessage({ message, sender }) {
       return (
-        <div className={sender === 'user' ? ''}>
-          {sender === "robot" && <img src="robot.png" width="50" />}
-          {message}
-          {sender === "user" && <img src="user.png" width="50" />}
+        <div
+          className={
+            sender === "user" ? "chat-message-user" : "chat-message-robot"
+          }
+        >
+          {sender === "robot" && (
+            <img src="robot.png" className="chat-message-profile" />
+          )}
+          <div className="chat-message-text">{message}</div>
+          {sender === "user" && (
+            <img src="user.png" className="chat-message-profile" />
+          )}
         </div>
       );
     }
 
-
     function ChatMessages({ chatMessages }) {
       return (
-        <>
+        <div className="chat-message-container">
           {chatMessages.map((chatMessage) => {
             return (
               <ChatMessage
@@ -110,10 +161,9 @@
               />
             );
           })}
-        </>
+        </div>
       );
     }
-
 
     function App() {
       const [chatMessages, setChatMessages] = React.useState([
@@ -141,11 +191,14 @@
 
       // const [chatMessages,setChatMessages]=array;
       // const chatMessages = array[0];
-      //const setChatMessages = array[1];   
+      //const setChatMessages = array[1];
       return (
         <div className="app-container">
-          <ChatInput chatMessages={chatMessages} setChatMessages={setChatMessages} />
           <ChatMessages chatMessages={chatMessages} />
+          <ChatInput
+            chatMessages={chatMessages}
+            setChatMessages={setChatMessages}
+          />
         </div>
       );
     }
